--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,12 @@
 [submodule "cpp_path_plan"]
 	path = cpp_path_plan
 	url = git@github.com:ECE4600-2023-G03/cpp_path_plan.git
+[submodule "src/state_interface"]
+	path = src/state_interface
+	url = git@github.com:ECE4600-2023-G03/state_interface.git
+[submodule "src/state_machine"]
+	path = src/state_machine
+	url = git@github.com:ECE4600-2023-G03/state_machine.git
+[submodule "src/pilot"]
+	path = src/pilot
+	url = git@github.com:ECE4600-2023-G03/pilot.git
