--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "src/pilot"]
 	path = src/pilot
 	url = git@github.com:ECE4600-2023-G03/pilot.git
+[submodule "src/cpp_path_plan"]
+	path = src/cpp_path_plan
+	url = git@github.com:ECE4600-2023-G03/cpp_path_plan.git
