--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "src/web_video_server"]
 	path = src/web_video_server
 	url = git@github.com:ECE4600-2023-G03/web_video_server.git
+[submodule "src/stella_vslam_ros"]
+	path = src/stella_vslam_ros
+	url = git@github.com:stella-cv/stella_vslam.git
