--- a/config/path_plan_params.yaml
+++ b/config/path_plan_params.yaml
@@ -3,10 +3,10 @@ Path_Plan:
     left_speed: 110
     right_speed: 150
     straight_speed: 95
-    pweight: 15
-    iweight: 2
-    min_error: 0
-    max_error: 22
-    not_centered_width: 0.25
-    centered_width: 0.25
-
+    pweight: 20.0  # base turning torque "speed" factor
+    iweight: 2.2  # turning torque "acceleration" factor
+    min_torque: 0
+    max_torque: 25
+    not_centered_width: 0.4
+    centered_width: 0.2
+    close_centered_width: 0.03
