--- a/config/path_plan_params.yaml
+++ b/config/path_plan_params.yaml
@@ -1,12 +1,13 @@
 Path_Plan:
   ros__parameters:
-    left_speed: 110
-    right_speed: 150
+    left_speed: 109
+    right_speed: 151
     straight_speed: 95
-    pweight: 17.0  # base turning torque "speed" factor
-    iweight: 1.8  # turning torque "acceleration" factor
+    pweight: 16.0  # base turning torque "speed" factor
+    iweight: 1.5  # turning torque "acceleration" factor
+    close_multplier: 1.2  # torque multiplier for when ball is close
     min_torque: 0
-    max_torque: 25
-    not_centered_width: 0.4
-    centered_width: 0.2
-    close_centered_width: 0.03
+    max_torque: 30
+    not_centered_width: 0.65
+    centered_width: 0.1
+    close_centered_width: 0.05
